gccida/c0/initializer_constant_valid_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4781:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *valid1; // [rsp+50h] [rbp-30h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4782:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *valid0; // [rsp+58h] [rbp-28h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4785:10: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
valuea = lang_hooks_0.expand_constant( value); 
         ^~~~~~~~~~~~
         lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4785:38: error: called object type '<dependent type>' is not a function or function pointer
valuea = lang_hooks_0.expand_constant( value); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4820:29: error: expected expression
if ( valid0 == ( tree_node *)*( &global_trees + 14) ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4820:18: error: use of undeclared identifier 'tree_node'
if ( valid0 == ( tree_node *)*( &global_trees + 14) ) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4822:29: error: expected expression
if ( valid1 != ( tree_node *)*( &global_trees + 14) ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4822:18: error: use of undeclared identifier 'tree_node'
if ( valid1 != ( tree_node *)*( &global_trees + 14) ) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4874:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)HIBYTE( WORD2( inner_0->common.type->block.abstract_origin)) >> 1] != MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4875:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)HIBYTE( WORD2( inner_0->common.type->block.abstract_origin)) >> 1] != MODE_PARTIAL_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4876:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)HIBYTE( WORD2( inner_0->common.type->block.abstract_origin)) >> 1] != MODE_COMPLEX_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4877:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)HIBYTE( WORD2( inner_0->common.type->block.abstract_origin)) >> 1] != MODE_VECTOR_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4898:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)HIBYTE( WORD2( inner_1->common.type->block.abstract_origin)) >> 1] != MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4899:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)HIBYTE( WORD2( inner_1->common.type->block.abstract_origin)) >> 1] != MODE_PARTIAL_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4900:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)HIBYTE( WORD2( inner_1->common.type->block.abstract_origin)) >> 1] != MODE_COMPLEX_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/varasm.c:4901:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)HIBYTE( WORD2( inner_1->common.type->block.abstract_origin)) >> 1] != MODE_VECTOR_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initializer_constant_valid_p/src/obj/varasm.o] Error 1
